[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-vending-machine"
version = "0.0.1"
description = "Simple vending machine in python"
authors = ["Tan Kuan Tiong <tktiong@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3
